[gd_scene load_steps=17 format=2]

[ext_resource path="res://view/prototypes/Thoughts.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/werd.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/RantHealthyTP2.tres" type="Resource" id=5]
[ext_resource path="res://view/prototypes/Brainstorming.gd" type="Script" id=6]
[ext_resource path="res://assets/uwu.png" type="Texture" id=7]
[ext_resource path="res://view/Offset.tscn" type="PackedScene" id=14]
[ext_resource path="res://view/CurrentThought.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=5]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 18
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = -8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 3
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "goto_next_level"
} ]
}

[sub_resource type="Animation" id=4]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NinePatch:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Game" type="Node"]
script = ExtResource( 3 )
thought_process = ExtResource( 5 )

[node name="Brainstorming" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
base_color = Color( 0.0429688, 0.0429688, 0.0429688, 1 )

[node name="Background" type="ColorRect" parent="Brainstorming"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.913725, 0.913725, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="ColorRect" parent="Brainstorming"]
anchor_right = 1.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Brainstorming/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Brainstorming/TitleBar/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Brainstorming/TitleBar/HBoxContainer"]
margin_left = 80.0
margin_right = 329.0
margin_bottom = 111.0
size_flags_horizontal = 2

[node name="RichTextLabel" type="Label" parent="Brainstorming/TitleBar/HBoxContainer/VBoxContainer"]
margin_right = 249.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.34902, 0.34902, 0.34902, 1 )
text = "Untitled Document"

[node name="RichTextLabel2" type="Label" parent="Brainstorming/TitleBar/HBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 249.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "File   Edit   View   Insert   Format"

[node name="RichTextLabel3" type="Label" parent="Brainstorming/TitleBar/HBoxContainer"]
margin_left = 690.0
margin_top = 28.0
margin_right = 884.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.34902, 0.34902, 0.34902, 1 )
text = "Did you know?
control + backspace
deletes a whole word!"
align = 1

[node name="RichTextLabel4" type="Label" parent="Brainstorming/TitleBar/HBoxContainer"]
margin_left = 904.0
margin_top = 47.0
margin_right = 904.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.34902, 0.34902, 0.34902, 1 )
align = 1

[node name="PFP" type="TextureRect" parent="Brainstorming/TitleBar/HBoxContainer"]
margin_left = 924.0
margin_right = 984.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )

[node name="Page" type="ColorRect" parent="Brainstorming"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
margin_top = 150.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Brainstorming/Page"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
size_flags_horizontal = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="Brainstorming/Page/VBoxContainer"]
margin_right = 574.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jam Ideas"

[node name="CurrentThought" type="Label" parent="Brainstorming/Page/VBoxContainer"]
margin_top = 4.0
margin_bottom = 8.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 16 )

[node name="Offset" parent="Brainstorming/Page/VBoxContainer/CurrentThought" instance=ExtResource( 14 )]

[node name="NinePatch" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = 607.811
margin_top = 114.454
margin_right = -41.189
margin_bottom = -32.5461

[node name="Control" parent="NinePatch" index="0"]
margin_left = 37.0
margin_right = -24.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Load"
anims/Complete = SubResource( 3 )
anims/Load = SubResource( 4 )

[node name="Fade" type="ColorRect" parent="AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.18921
margin_bottom = -1.18921
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finish" from="." to="." method="_on_Game_finish"]
[connection signal="found_bad_thought" from="." to="NinePatch" method="_on_Game_found_bad_thought"]
[connection signal="new_thought" from="." to="NinePatch" method="_on_Game_new_thought"]
[connection signal="submit_good_thought" from="." to="Brainstorming" method="_on_Game_submit_good_thought"]
[connection signal="submit_good_thought" from="." to="NinePatch" method="_on_Game_submit_good_thought"]
[connection signal="update_thought" from="." to="Brainstorming" method="_on_Game_update_thought"]

[editable path="NinePatch"]
